--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-<!-- header section start -->
-    <header class="container">
+    <!-- header section start -->
+    <header class=" header container">
         <nav>
             <div class="logo">
                 <img src="Images/Group 40071 (2).png" alt="" width="45px">
@@ -23,8 +23,160 @@
                 <li><a href="">Blog</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
+            <div class="menu-logo">
+                <img src="logo/bars-solid.svg" alt="" width="25px">
+            </div>
         </nav>
     </header>
+
+    <main>
+        <!-- popular tours section -->
+        <section class="container">
+            <div class="popular">
+                <div class="text-content">
+                    <h2>Our Popular Tours</h2>
+                    <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales
+                        dictumst
+                        nec
+                        nibh pellentesque.</p>
+                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis
+                        erat at
+                        .
+                    </li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                        suspendisse
+                        nullam.</li>
+                    <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus
+                        ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing
+                        risus
+                        natoque aliquet. Id bibendum nunc senectus semper tincidunt.</p>
+                    <button class="">Read More</button>
+                </div>
+
+                <div class="popular-img">
+                    <img src="Images/Rectangle 4.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- destination section start -->
+        <section class="container">
+            <div class="destination">
+                <div class="text-content">
+                    <h2>Choose Your Destination</h2>
+                    <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales
+                        dictumst nec nibh pellentesque.</p>
+                </div>
+                <div class="destination-img">
+                    <div class="first-col">
+                        <div class="first-img">
+                            <div class="banner-text">
+                                <h1>Maldives</h1>
+                            </div>
+                        </div>
+                        <div class="second-img">
+                            <div class="banner-text">
+                                <h1>Indonesia</h1>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="second-col">
+                        <div class="first-img">
+                            <div class="banner-text">
+                                <h1>Srilanka</h1>
+                            </div>
+                        </div>
+                        <div class="second-img">
+                            <div class="banner-text">
+                                <h1>North America</h1>
+                            </div>
+                        </div>
+                        <div class="third-img">
+                            <div class="banner-text">
+                                <h1>Kashmir</h1>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="third-col">
+                        <div class="first-img">
+                            <div class="banner-text">
+                                <h1>Bangladesh</h1>
+                            </div>
+                        </div>
+                        <div class="second-img">
+                            <div class="banner-text">
+                                <h1>Bandarban</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- choose section start -->
+        <section class="container">
+            <div class="choose">
+                <div class="text-content">
+                    <h2>Why Choose Us</h2>
+                    <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales
+                        dictumst
+                        nec nibh pellentesque.</p>
+                </div>
+                <div class="items">
+                    <div class="item-1">
+                        <div class="first-item">
+                            <img src="logo/bars-solid.svg" alt="" width="50px">
+                            <h3>Handpicked Hotels</h3>
+                            <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero
+                                commodo
+                                sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                        </div>
+                        <div class="second-item">
+                            <img src="logo/bars-solid.svg" alt="" width="50px">
+                            <h2>Handpicked Hotels</h2>
+                            <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero
+                                commodo
+                                sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                        </div>
+                    </div>
+                    <div class="item-2">
+                        <div class="third-item">
+                            <img src="logo/bars-solid.svg" alt="" width="50px">
+                            <h3>Handpicked Hotels</h3>
+                            <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero
+                                commodo
+                                sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </main>
+
+    <!-- footer section start -->
+    <footer class="container">
+        <div class="background">
+            <div class="logo">
+                <img src="Images/Group 40071 (2).png" alt="" width="45px">
+                Hero <span class="primary-text">Travel</span>
+            </div>
+            <div class="text-content">
+                <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate.
+                    Leo
+                    erat maecenas vitae elementum ultricies nullam. </p>
+            </div>
+            <div class="socal-logo">
+                <img src="logo/facebook.png" alt="" width="30px">
+                <img src="logo/facebook.png" alt="" width="30px">
+                <img src="logo/facebook.png" alt="" width="30px">
+                <img src="logo/facebook.png" alt="" width="30px">
+            </div>
+            <hr>
+            <div class="copyright">
+                <p> 2024, All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
