--- a/index.html
+++ b/index.html
@@ -151,32 +151,48 @@
                     </div>
                 </div>
         </section>
+
+        <!-- subscribe section start -->
+        <section class="container">
+            <div class="subscribe">
+                <div class="form">
+                    <h2>Newsletter</h2>
+                    <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                    <hr class="hr">
+                    <input type="text" placeholder="Enter your name" class="input">
+                    <br>
+                    <input type="text" placeholder="Enter your email" class="input">
+
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- footer section start -->
-    <footer class="container">
-        <div class="background">
-            <div class="logo">
-                <img src="Images/Group 40071 (2).png" alt="" width="45px">
-                Hero <span class="primary-text">Travel</span>
-            </div>
-            <div class="text-content">
-                <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate.
-                    Leo
-                    erat maecenas vitae elementum ultricies nullam. </p>
-            </div>
-            <div class="socal-logo">
-                <img src="logo/facebook.png" alt="" width="30px">
-                <img src="logo/facebook.png" alt="" width="30px">
-                <img src="logo/facebook.png" alt="" width="30px">
-                <img src="logo/facebook.png" alt="" width="30px">
-            </div>
-            <hr>
-            <div class="copyright">
-                <p> 2024, All Rights Reserved.</p>
-            </div>
-        </div>
-    </footer>
+    <footer class=" container">
+                    <div class="background">
+                        <div class="logo">
+                            <img src="Images/Group 40071 (2).png" alt="" width="45px">
+                            Hero <span class="primary-text">Travel</span>
+                        </div>
+                        <div class="text-content">
+                            <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci
+                                potenti vulputate.
+                                Leo
+                                erat maecenas vitae elementum ultricies nullam. </p>
+                        </div>
+                        <div class="socal-logo">
+                            <img src="logo/facebook.png" alt="" width="30px">
+                            <img src="logo/facebook.png" alt="" width="30px">
+                            <img src="logo/facebook.png" alt="" width="30px">
+                            <img src="logo/facebook.png" alt="" width="30px">
+                        </div>
+                        <hr>
+                        <div class="copyright">
+                            <p> 2024, All Rights Reserved.</p>
+                        </div>
+                    </div>
+                    </footer>
 
 </body>
 
