--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
                 <div class="items">
                     <div class="item-1">
                         <div class="first-item">
-                            <img src="logo/bars-solid.svg" alt="" width="50px">
+                            <img src="logo/hotel.png" alt="" width="80px">
                             <h3>Handpicked Hotels</h3>
                             <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero
                                 commodo
                                 sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                         </div>
                         <div class="second-item">
-                            <img src="logo/bars-solid.svg" alt="" width="50px">
+                            <img src="logo/map.png" alt="" width="80px">
                             <h2>Handpicked Hotels</h2>
                             <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero
                                 commodo
@@ -142,7 +142,7 @@
                     </div>
                     <div class="item-2">
                         <div class="third-item">
-                            <img src="logo/bars-solid.svg" alt="" width="50px">
+                            <img src="logo/price.jpg" alt="" width="80px">
                             <h3>Handpicked Hotels</h3>
                             <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero
                                 commodo
@@ -170,29 +170,29 @@
 
     <!-- footer section start -->
     <footer class=" container">
-                    <div class="background">
-                        <div class="logo">
-                            <img src="Images/Group 40071 (2).png" alt="" width="45px">
-                            Hero <span class="primary-text">Travel</span>
-                        </div>
-                        <div class="text-content">
-                            <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci
-                                potenti vulputate.
-                                Leo
-                                erat maecenas vitae elementum ultricies nullam. </p>
-                        </div>
-                        <div class="socal-logo">
-                            <img src="logo/facebook.png" alt="" width="30px">
-                            <img src="logo/facebook.png" alt="" width="30px">
-                            <img src="logo/facebook.png" alt="" width="30px">
-                            <img src="logo/facebook.png" alt="" width="30px">
-                        </div>
-                        <hr>
-                        <div class="copyright">
-                            <p> 2024, All Rights Reserved.</p>
-                        </div>
-                    </div>
-                    </footer>
+        <div class="background">
+            <div class="logo">
+                <img src="Images/Group 40071 (2).png" alt="" width="45px">
+                Hero <span class="primary-text">Travel</span>
+            </div>
+            <div class="text-content">
+                <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci
+                    potenti vulputate.
+                    Leo
+                    erat maecenas vitae elementum ultricies nullam. </p>
+            </div>
+            <div class="socal-logo">
+                <img src="logo/twitter-fill.svg" alt="" width="30px">
+                <img src="logo/facebook-fill.svg" alt="" width="30px">
+                <img src="logo/instagram-fill.svg" alt="" width="30px">
+                <img src="logo/github-fill.svg" alt="" width="30px">
+            </div>
+            <hr>
+            <div class="copyright">
+                <p> 2024, All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
