--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
                     <input type="text" placeholder="Enter your name" class="input">
                     <br>
                     <input type="text" placeholder="Enter your email" class="input">
-
+                    <br>
+                    <button >Subscribe</button>
                 </div>
             </div>
         </section>
