--- a/index.html
+++ b/index.html
@@ -163,7 +163,13 @@
                     <br>
                     <input type="text" placeholder="Enter your email" class="input">
                     <br>
-                    <button >Subscribe</button>
+                    <button>Subscribe</button>
+                </div>
+                <div class="banner-img">
+                    <!-- <div class="banner-text">
+                        <p>Travel.com</p>
+                        <h1>Save up to 70%</h1>
+                    </div> -->
                 </div>
             </div>
         </section>
