--- a/index.html
+++ b/index.html
@@ -30,6 +30,26 @@
     </header>
 
     <main>
+        <section class="container">
+            <div class="bg-img">
+                <div class="explore">
+                    <div class="text-content">
+                        <h1>Explore Your Travel</h1>
+                        <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio
+                            enim
+                            ac quis sapien urna eu phasellus</p>
+                    </div>
+                    <div class="from">
+                        <p>Where go</p>
+                        <p>When</p>
+                        <p>Select Type</p>
+                        <p class="find">Find Now</p>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
         <!-- popular tours section -->
         <section class="container">
             <div class="popular">
