--- a/index.html
+++ b/index.html
@@ -172,6 +172,35 @@
                 </div>
         </section>
 
+        <!-- discounts section start -->
+        <section class="container">
+            <div class="discounts">
+                <div class="text-content">
+                    <h2>Deals & Discounts</h2>
+                    <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales
+                        dictumst nec nibh pellentesque.</p>
+                </div>
+                <div class="first-img">
+                    <div class="card">
+                        <div class="time">
+                            <ul>
+                                <p > <img src="logo/clock-solid.svg" alt="" width="15px" height="15px" ></span>7 Day / 6 Night</p>
+                                <p><span><img src="logo/maximize-solid.svg" alt="" width="15px"></span>Max : 10</p>
+                                <p><span><img src="logo/location-dot-solid.svg" alt="" width="15px"></span>Malaysia</p>
+                            </ul>
+                        </div>
+                        <h3>Tour To Satorini</h3>
+                        <p>Amet consectetur. Vulputate commodo felis <br>
+                            molestie risus ornare nulla amet et. Libero commodo sagittis <br> dignissim adipiscing quis.
+                            Habitant adipiscing.</p>
+                        <h3 class="primary-text">Price: $1300-$1500</h3>
+                        <button>Book Now</button>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
         <!-- subscribe section start -->
         <section class="container">
             <div class="subscribe">
