--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
                     <div class="card">
                         <div class="time">
                             <ul>
-                                <p > <img src="logo/clock-solid.svg" alt="" width="15px" height="15px" ></span>7 Day / 6 Night</p>
+                                <p> <img src="logo/clock-solid.svg" alt="" width="15px" height="15px"></span>7 Day / 6
+                                    Night</p>
                                 <p><span><img src="logo/maximize-solid.svg" alt="" width="15px"></span>Max : 10</p>
                                 <p><span><img src="logo/location-dot-solid.svg" alt="" width="15px"></span>Malaysia</p>
                             </ul>
@@ -197,8 +198,33 @@
                         <button>Book Now</button>
                     </div>
                 </div>
+              <div class="Packages">
+                <button >See All Packages</button>
+              </div>
             </div>
+        </section>
 
+        <!-- Place section start -->
+        <section class="container">
+            <div class="Perfect">
+                <div class="text-content">
+                    <h2>A Simple Perfect Place <br>To Get Lost</h2>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis.</p>
+                    <ul>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                            suspendisse nullam.</li>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                            suspendisse nullam.</li>
+                    </ul>
+                    <button>See More</button>
+                </div>
+                <div class="video-content">
+                    <iframe 
+                        src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
+                    </iframe>
+                </div>
+            </div>
         </section>
 
         <!-- subscribe section start -->
@@ -222,6 +248,8 @@
                 </div>
             </div>
         </section>
+
+
     </main>
 
     <!-- footer section start -->
@@ -248,6 +276,8 @@
                 <p> 2024, All Rights Reserved.</p>
             </div>
         </div>
+
+
     </footer>
 
 </body>
